logs/mitmdumpex.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/ConfigArgParse-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/hpack'...
Listing './lib/python3.5/site-packages/hpack-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/html2text'...
Listing './lib/python3.5/site-packages/html2text-2018.1.9.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/libmproxy'...
Listing './lib/python3.5/site-packages/libmproxy/console'...
Listing './lib/python3.5/site-packages/libmproxy/contrib'...
Listing './lib/python3.5/site-packages/libmproxy/contrib/jsbeautifier'...
Listing './lib/python3.5/site-packages/libmproxy/contrib/jsbeautifier/unpackers'...
Listing './lib/python3.5/site-packages/libmproxy/contrib/wbxml'...
Listing './lib/python3.5/site-packages/libmproxy/onboarding'...
Listing './lib/python3.5/site-packages/libmproxy/onboarding/static'...
Listing './lib/python3.5/site-packages/libmproxy/onboarding/static/fontawesome'...
Listing './lib/python3.5/site-packages/libmproxy/onboarding/static/fontawesome/css'...
Listing './lib/python3.5/site-packages/libmproxy/onboarding/static/fontawesome/fonts'...
Listing './lib/python3.5/site-packages/libmproxy/onboarding/templates'...
Listing './lib/python3.5/site-packages/libmproxy/platform'...
Listing './lib/python3.5/site-packages/libmproxy/protocol'...
Listing './lib/python3.5/site-packages/libmproxy/proxy'...
Listing './lib/python3.5/site-packages/libmproxy/web'...
Compiling './lib/python3.5/site-packages/libmproxy/web/app.py'...
***   File "./lib/python3.5/site-packages/libmproxy/web/app.py", line 141
    print "Warning: Unknown update {}.{}: {}".format(a, k, v)
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libmproxy/web/static'...
Listing './lib/python3.5/site-packages/libmproxy/web/static/fonts'...
Listing './lib/python3.5/site-packages/libmproxy/web/static/images'...
Listing './lib/python3.5/site-packages/libmproxy/web/static/images/chrome-devtools'...
Listing './lib/python3.5/site-packages/libmproxy/web/templates'...
Listing './lib/python3.5/site-packages/libmproxy/webfonts'...
Listing './lib/python3.5/site-packages/libmproxyex'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/mitmdumpex-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/mitmproxy-0.13.egg-info'...
Listing './lib/python3.5/site-packages/netlib'...
Listing './lib/python3.5/site-packages/netlib/http2'...
Compiling './lib/python3.5/site-packages/netlib/wsgi.py'...
***   File "./lib/python3.5/site-packages/netlib/wsgi.py", line 134
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netlib-0.13.1.egg-info'...
Listing './lib/python3.5/site-packages/passlib'...
Listing './lib/python3.5/site-packages/passlib/_data'...
Listing './lib/python3.5/site-packages/passlib/_data/wordsets'...
Listing './lib/python3.5/site-packages/passlib/crypto'...
Listing './lib/python3.5/site-packages/passlib/crypto/_blowfish'...
Listing './lib/python3.5/site-packages/passlib/crypto/scrypt'...
Listing './lib/python3.5/site-packages/passlib/ext'...
Listing './lib/python3.5/site-packages/passlib/ext/django'...
Listing './lib/python3.5/site-packages/passlib/handlers'...
Listing './lib/python3.5/site-packages/passlib/tests'...
Listing './lib/python3.5/site-packages/passlib/utils'...
Listing './lib/python3.5/site-packages/passlib/utils/compat'...
Listing './lib/python3.5/site-packages/passlib-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/data'...
Listing './lib/python3.5/site-packages/test/data/clientcert'...
Listing './lib/python3.5/site-packages/test/data/verificationcerts'...
Listing './lib/python3.5/site-packages/test/http2'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/urwid'...
Listing './lib/python3.5/site-packages/urwid/tests'...
Listing './lib/python3.5/site-packages/urwid-1.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
